[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "FHS"
authors = [{name = "KOLANICH"}]
description = "Represents a target triple."
readme = "ReadMe.md"
keywords = ["path", "standardize", "FHS"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/KOLANICH/FHS.py"}
requires-python = ">=3.4"
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["FHS"]
include-package-data = false

[tool.setuptools_scm]
